[project]
name = "comfyui_otonx_nodes"
description = "Nodes: OTX Multiple Values, OTX KSampler Feeder. This extension provides custom nodes for ComfyUI created for personal projects. Made available for reference. Nodes may be updated or changed intermittently or not at all. Review & test before use."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/budihartono/comfyui_otonx_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_otonx_nodes"
Icon = ""
